k8s/configs/frontend-fault.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-conf-frontend
data:
  envoy.yaml: |
    static_resources:
      listeners:
      # 1. INGRESS Listener
      - address:
          socket_address: { address: 0.0.0.0, port_value: 8000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route: { cluster: local_app }
              http_filters:
              - name: envoy.filters.http.router
                typed_config: {}

      # 2. EGRESS Listener (With FAULT INJECTION)
      - address:
          socket_address: { address: 0.0.0.0, port_value: 8001 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: egress_pinger
              route_config:
                name: pinger_route
                virtual_hosts:
                - name: pinger_backend
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route:
                      cluster: pinger_v1 # Send everything to V1 for this test
              http_filters:
              # >>> CHAOS STARTS HERE <<<
              - name: envoy.filters.http.fault
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.fault.v3.HTTPFault
                  abort:
                    http_status: 503 # Fake a Server Crash
                    percentage:
                      numerator: 50 # Fail 50% of requests
                      denominator: HUNDRED
              # >>> CHAOS ENDS HERE <<<
              - name: envoy.filters.http.router
                typed_config: {}

      clusters:
      - name: local_app
        connect_timeout: 0.25s
        type: STRICT_DNS
        load_assignment:
          cluster_name: local_app
          endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 9000 } } } }] }]
      
      - name: pinger_v1
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: pinger_v1
          endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: pinger-v1-service, port_value: 3000 } } } }] }]

    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 8081 }

# ------------------- RESTART FRONTEND -------------------
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels: { app: frontend }
spec:
  replicas: 1
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
        prometheus.io/path: "/stats/prometheus"
    spec:
      containers:
      - name: frontend
        image: localhost/frontend:v1
        resources:
            requests: { cpu: "100m", memory: "64Mi" }
            limits: { cpu: "200m", memory: "128Mi" }
        env:
        - name: PINGER_BASE_URL
          value: "http://localhost:8001" 
        - name: DETAILS_BASE_URL
          value: "http://details-service:4000"
        ports: [{ containerPort: 9000 }]
        imagePullPolicy: IfNotPresent
      - name: envoy
        image: envoyproxy/envoy:v1.18.2
        volumeMounts:
        - name: config
          mountPath: /etc/envoy/
        ports: [{ containerPort: 8000 }, { containerPort: 8081 }, { containerPort: 8001 }]
      volumes:
      - name: config
        configMap: { name: envoy-conf-frontend }
